EEN-206,EEN-229 fixes after tickets had been re opened

--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/complete.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/complete.html.twig
@@ -43,7 +43,7 @@
             <p class="sh-bold">About you</p>
         </div>
         <div class="column-two-thirds">
-            <p class="no-margin"><strong class="label your-name sh-bold">Your name:</strong><span>{{ form.firstname }} {{ form.firstname }}</span></p>
+            <p class="no-margin"><strong class="label your-name sh-bold">Your name:</strong><span>{{ form.firstname }} {{ form.lastname }}</span></p>
             <p class="no-margin"><strong class="label your-email sh-bold">Your email address:</strong><span>{{ form.contact_email }}</span></p>
             <p class="no-margin"><strong class="label your-contact sh-bold">Contact number:</strong><span>{{ form.contact_phone }}</span></p>
             {% if form.newsletter is empty %}
