--- a/drupal/modules/custom/events/templates/events-search.html.twig
+++ b/drupal/modules/custom/events/templates/events-search.html.twig
@@ -26,20 +26,23 @@
                         {# Start and End date #}
                         {% if row._source.start_date|date("d-m-Y") != row._source.end_date|date("d-m-Y") %}
                             {{ row._source.start_date|date("d-m-Y") }} |
-                            {{ row._source.end_date|date("d-m-Y") }} |
+                            {{ row._source.end_date|date("d-m-Y") }}
                         {% else %}
-                            {{ row._source.start_date|date("d-m-Y") }} |
+                            {{ row._source.start_date|date("d-m-Y") }}
                         {% endif %}
                         {# Country of origin #}
-                        {% set flag = row._source.country_code|lower %}
-                        {% if flag == 'uk' %}
-                            {% set flag = 'gb' %}
+                        {% if row._source.country_code %}
+                            |
+                            {% set flag = row._source.country_code|lower %}
+                            {% if flag == 'uk' %}
+                                {% set flag = 'gb' %}
+                            {% endif %}
+                            <span class="flag-icon flag-icon-{{ flag }}"></span>
+                            {{ row._source.country }}
                         {% endif %}
-                        <span class="flag-icon flag-icon-{{ flag }}"></span>
-                        {{ row._source.country }}
                     </p>
                     <p>
-                        {{ row._source.description }}
+                        {{ row._source.summary }}
                     </p>
                 </div>
 
