EEN-237 improved alt tag on logo

--- a/drupal/themes/custom/een/templates/block/block--system-branding-block.html.twig
+++ b/drupal/themes/custom/een/templates/block/block--system-branding-block.html.twig
@@ -17,7 +17,7 @@
     <div class="header-logo">
         {% if site_logo %}
             <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">
-              <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" />
+              <img src="{{ site_logo }}" alt="{{ 'Enterprise Europe Network Logo'|t }}" />
             </a>
         {% endif %}
     </div>
