EEN-229 CSS responsive fix

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -10,8 +10,8 @@
 {% endif %}
 
 <div class="content-heading">
-    <h1>{{ 'Partnering Opportunities'|t }}</h1>
-    <h2 class="heading-large">{{ 'Find international partners'|t }}</h2>
+    <h1 tabindex="0">{{ 'Partnering Opportunities'|t }}</h1>
+    <h2 class="heading-large" tabindex="0">{{ 'Find international partners'|t }}</h2>
     <h3>{{ 'Search for partners to manufacture, distribute co-develop and supply your products, ideas and business.'|t }}</h3>
 </div>
 
