--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -1078,20 +1078,25 @@ form[data-drupal-selector="opportunity-search-form"] {
         }
     }
 }
-@media (max-width: 767px) { 
+@media (max-width: 680px) { 
     .column-two-thirds {
         &.with-cta {
             > div {
-                width:80%;
-                float:left;
+                width:100%;
+                float:none;
                 overflow:hidden;
                 p {
                     margin-bottom:20px;
                 }
             }
             > p {
-                width:20%;
+                width:100%;
+                float:none;
+                text-align:left;
             }
+        }
+        .label {
+            width:140px;
         }
     }    
 }    
