--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step3.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step3.html.twig
@@ -1,7 +1,7 @@
 <div class="grid-row">
     <div class="column-full">
         <div class="form-heading header-secondary">
-            <h1 class="heading-large">Thank you for applying for this project.</h1>
+            <h1 class="heading-large" tabindex="0">Thank you for applying for this project.</h1>
             <p>To complete your project application please create an account with EEN to take advantage
                 of some other great benefits to help grow your business</p>
         </div>
@@ -15,7 +15,7 @@
             {{ form.form_build_id }}
             {{ form.form_id }}
 
-            <p class="heading-medium step">Step 3 of 3</p>
+            <p class="heading-medium step" tabindex="0">Step 3 of 3</p>
             <h2 class="heading-large">Your address</h2>
 
             <div class="form-section">
