--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -23,7 +23,6 @@
         </div>
     </div>
     <div class="column-two-thirds">
-
         {% if results is not null %}
             {% if total > 0 %}
                 <div class="row" ng-show="meta.searched" ng-cloak ng-class="{ transp: meta.searching }">
@@ -34,14 +33,14 @@
                 </div>
 
                 <div class="row" ng-show="!meta.searched" ng-class="{ transp: meta.searching }">
-                    <h3 class="heading-xlarge results-list-heading">{{ total|number_format(0, '.', ',') }} <span class="font-xsmall">{{ 'opportunities '|t }}</span></h3>
+                    <h3 class="heading-xlarge results-list-heading" tabindex="0">{{ total|number_format(0, '.', ',') }} <span class="font-xsmall">{{ 'opportunities '|t }}</span></h3>
                 </div>
 
                 <div class="results-list">
-                    <p class="list-subtext">Get updates to this list  <a href="#" class="follow-list"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a> <a href="#" class="follow-list"><i class="fa fa-rss" aria-hidden="true"></i> RSS</a></p>
+                    <p class="list-subtext" tabindex="0">Get updates to this list  <a href="#" class="follow-list"tabindex="0"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a> <a href="#" class="follow-list" tabindex="0"><i class="fa fa-rss" aria-hidden="true"></i> RSS</a></p>
 
                     <div class="row row-bordered" ng-show="meta.searched" ng-repeat="row in results" ng-cloak ng-class="{ transp: meta.searching }">
-                        <h3 class="results-list-heading-item">
+                        <h3 class="results-list-heading-item" tabindex="0">
                             <a ng-href="/opportunities/{[{row.id}]}" id="opportunity-link" ng-bind-html="row.title | unsafe">
                                 {[{ row.title }]}
                             </a>
