--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -20,10 +20,14 @@
         {% if results is not null %}
             {% if total > 0 %}
                 <div class="row" ng-show="meta.searched" ng-cloak ng-class="{ transp: meta.searching }">
-                    <h3 class="heading-xlarge results-list-heading">{[{ data.total | number }]} <span class="font-xsmall"> <ng-pluralize count="data.total"
-                        when="{'0': 'opportunities',
+                    <h3 class="heading-xlarge results-list-heading">{[{ data.total | number }]}
+                        <span class="font-xsmall">
+                            <ng-pluralize count="data.total"
+                                          when="{'0': 'opportunities',
                                'one': 'opportunity',
-                               'other': 'opportunities'}"></span></h3>
+                               'other': 'opportunities'}"/>
+                        </span>
+                    </h3>
                 </div>
 
                 <div class="row" ng-show="!meta.searched" ng-class="{ transp: meta.searching }">
