EEN-238n improvements for accessibility

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -64,12 +64,12 @@
             <div class="contents-list sticky-sidebar">
                 <h3 class="heading-medium sticky-sidebar-header" tabindex="0">{{ 'Contents'|t }}</h3>
                 <ul class="sticky-sidebar-content">
-                    <li><a tabindex="0" href="#summary">{{ 'Summary'|t }}</a></li>
-                    <li><a tabindex="0" href="#description">{{ 'Description'|t }}</a></li>
-                    <li><a tabindex="0" href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
-                    <li><a tabindex="0" href="#advantages_and_innovations">{{ 'Advantages and innovations'|t }}</a></li>
-                    <li><a tabindex="0" href="#development_stage">{{ 'Development Stage'|t }}</a></li>
-                    <li><a tabindex="0" href="#ipr">{{ 'Intellectual Property Rights (IPR)'|t }}</a></li>
+                    <li><a href="#summary">{{ 'Summary'|t }}</a></li>
+                    <li><a href="#description">{{ 'Description'|t }}</a></li>
+                    <li><a href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
+                    <li><a href="#advantages_and_innovations">{{ 'Advantages and innovations'|t }}</a></li>
+                    <li><a href="#development_stage">{{ 'Development Stage'|t }}</a></li>
+                    <li><a href="#ipr">{{ 'Intellectual Property Rights (IPR)'|t }}</a></li>
                 </ul>
 
                 <a tabindex="0" class="button-brand" href="#express_your_interest">Apply for this project</a>
