EEN-241 Form improvements for AD accessibility

--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -164,7 +164,7 @@
                 <p>By submitting this application you are confirming that the details you are correct and that, as per
                     the privacy policy, my personal information will not be shared.</p>
             </div>
-            <p><a href="{{ url('opportunities.eoi.complete', {'profileId': form.profile_id}) }}" class="button">Complete your application</a></p>
+            <p><a href="{{ url('opportunities.eoi.complete', {'profileId': form.profile_id}) }}" class="button js-spb-click" tabindex="0" role="button">Complete your application</a></p>
         </div>
         <div class="column-one-third">
 
