--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -1079,6 +1079,9 @@ form[data-drupal-selector="opportunity-search-form"] {
         div p {
             margin:0;
         }
+        a {
+            font-weight:600;
+        }
     }
     .label {
         width:200px;
