--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -1,7 +1,7 @@
 <div class="content-heading">
     <h1>{{ 'Partnering Opportunities'|t }}</h1>
-    <h2 class="heading-large">{{ 'Find international partners'|t }}</h2>
-    <h3>{{ 'Search for partners to manufacture, distribute co-develop and supply your products, ideas and business.'|t }}</h3>
+    <h2 tabindex="0" class="heading-large">{{ 'Find international partners'|t }}</h2>
+    <h3 tabindex="0">{{ 'Search for SME and academic partners to manufacture, distribute, co-develop and supply your products, ideas and business.'|t }}</h3>
 </div>
 
 <div class="grid-row">
