EEN-238 tabbing content.

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -33,11 +33,11 @@
         </div>
 
         <div class="results-list">
-            <p class="list-subtext" tabindex="0">Get updates to this list <a href="#" class="follow-list"
+            <h4 tabindex="0" class="list-subtext">Get updates to this list <a href="#" class="follow-list"
                                                                              tabindex="0"><i class="fa fa-envelope"
                                                                                              aria-hidden="true"></i>
                     Email</a> <a href="#" class="follow-list" tabindex="0"><i class="fa fa-rss" aria-hidden="true"></i>
-                    RSS</a></p>
+                    RSS</a></h4>
             <div class="contents-text-block">
                 <p tabindex="0" class="sr-only">The search results below each have a summary which you may find useful
                     in determining if the opportunity is what you’re looking for.</p>
