--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/complete.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/complete.html.twig
@@ -1,6 +1,6 @@
 <div class="grid-row">
     <div class="column-full">
-        <div class="banner">
+        <div class="banner" tabindex="0">
             <p class="heading-xlarge">Application complete</p>
             <p>Your reference number is</p>
             <p class="heading-large">{{ form.reference_number }}</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="column-full">
         <h2 class="heading-medium">Opportunity application</h2>
-        <hr />
+        <hr aria-hidden="true" />
     </div>
     <div class="row">
         <div class="column-one-third">
