--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -1,9 +1,9 @@
 <div class="grid-row">
     <div class="column-full">
         <div class="header-secondary header-secondary">
-            <h1 class="heading-large">Check your answers before completing your application</h1>
+            <h1 tabindex="0" class="heading-large">Check your answers before completing your application</h1>
         </div>
-        <h2 class="heading-medium">Opportunity application</h2>
+        <h2 tabindex="0" class="heading-medium">Opportunity application</h2>
         <hr/>
     </div>
     <div class="row no-margin">
